metadata/force-app/main/default/objects/CustomName_UthcM__c/CustomName_UthcM__c.object-meta.xml
<CustomObject>
    <description>Description_JLlro</description>
    <label>CustomLabel_msRex</label>
    <nameField>
        <label>CustomLabel_msRex</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_msRexs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>