metadata/force-app/main/default/objects/CustomName_UthcM__c/fields/CustomField_MDwvK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MDwvK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwlIbh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>